changed watch packet

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "walk": "2.x.x",
-    "watch-tree": "0.1.x",
+    "watch-tree-maintained": "0.1.x",
     "node-promise": "0.5.x",
     "mkdirp": "0.3.x",
     "coffee-script": "1.6.x",
